@@ -1,3 +1,9 @@
+TAG: annotload-4-3-3-1
+DATE: 03/31/2010
+STAFF: lec
+CHANGES:
+a) fixed deletion of annot/evidence
+
 TAG: annotload-3-5-1-4
 DATE: 11/20/2006
 STAFF: lec
